--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "babel-loader": "^8.2.5",
     "webpack": "^5.56.0",
     "webpack-cli": "^4.8.0"
   },
   "dependencies": {
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14"
   }
