--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "webpack-cli": "^4.8.0"
   },
   "dependencies": {
+    "@vue/babel-preset-jsx": "^1.4.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14"
